# moo-rs

./: .gitignore  Cargo.toml
game/: .gitignore  LICENSE  LICENSE-AGPL-3.0  a.js
game/client/: Cargo.toml  index.html
game/client/src/: main.rs
game/client/src/class/: class.rs  data.rs  game.rs  mod.rs  object.rs  player.rs  render.rs
game/client/src/packets/: Incoming.rs  Outgoing.rs  mod.rs
game/client/src/shader/: fragment.glsl  vertex.glsl
game/server/: .dockerignore  .gitignore  Cargo.toml  Config.toml  Dockerfile  TODO
game/server/.github/workflows/: autocommit.yml  cleanup.yaml  deploy.yaml
game/server/src/: config.rs  main.rs
game/server/src/class/: class.rs  data.rs  mod.rs  player.rs  server.rs
game/server/src/packets/: Incoming.rs  Outgoing.rs  mod.rs  packets.rs
game/www/: Cargo.toml  cmd.txt  index.html
game/www/src/: config.rs  game.rs  main.rs
src/: main.rs
src/class/: player.rs  server.rs
