[package]
name = "shit"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
dashmap = "6.1.0"
futures = "0.3.31"
rayon = "1.10.0"
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
tracing-tree = "0.4.0"
tungstenite = "0.26.2"
uuid = "1.17.0"
