[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
async-tungstenite = { version = "0.29.0", features = ["async-std-runtime"] }
futures-util = "0.3.31"
macroquad = "0.4"
tokio-tungstenite = "*"
tungstenite = "0.26.2"
url = "2.5.4"