[package]
name = "tribalcraft_client"
version = "0.1.0"
authors = ["javedpension"]
license-file = "./LICENSE"
keywords = ["tribalcraft", "moomoo", "meedy", "sploop", "arras", "poopoo"]
edition = "2021"

[dependencies]
notan = "0.13.0"
gloo-net = "0.3"
futures-util = "0.3.31"
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.100"
log = "0.4"
console_log = "1.0"
bincode = "2.0.1"
serde = "1.0.219"
futures = "0.3.31"
